--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:8889/cheese-mvc-data
-spring.datasource.username=cheese-mvc-data
-spring.datasource.password=cheese
+spring.datasource.url=jdbc:mysql://localhost:8889/hebrew-dict
+spring.datasource.username=hebrew-dict
+spring.datasource.password=hebrew
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
